apps/api/dev-musicbook-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-musicbook-be
  namespace: api
  labels:
    app: dev-musicbook-be
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dev-musicbook-be
  template:
    metadata:
      labels:
        app: dev-musicbook-be
    spec:
      containers:
      - name: dev-musicbook-be
        image: hyeonwoo5342/dev-musicbook-be:18
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
