apps/api/dev-musicbook-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-musicbook-be
  namespace: api
  labels:
    app: dev-musicbook-be
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: dev-musicbook-be
