apps/api/dev-musicbook-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-musicbook-be-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.musicbook.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-musicbook-be
            port:
              number: 3000
